# lecospy

./: README.md  dev-requirements.txt  dev-setup.sh  requirements.txt
Data/training/: grd_indices.csv
Functions/: spectral_operations.py
Scripts/: gs_revised.ipynb  speclib_processing.ipynb
projects/cli/: pyproject.toml
